--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#cbd6e9">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/images/icons/icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/images/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/images/icons/icon-512x512.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&amp;subset=cyrillic-ext" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -20,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Song Manager</title>
   </head>
   <body>
     <noscript>
